apps/home-assistant/home-assistant.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      automountServiceAccountToken: false
      nodeSelector:
        kubernetes.io/hostname: homelab
      containers:
        - name: home-assistant
          image: ghcr.io/home-assistant/home-assistant:stable
          ports:
            - containerPort: 8123
              name: http
          livenessProbe:
            httpGet:
              path: /api/health
              port: 8123
            initialDelaySeconds: 120
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/health
              port: 8123
            initialDelaySeconds: 120
            periodSeconds: 10
          resources:
            requests:
              cpu: 256m
              memory: 512Mi
            limits:
              cpu: 1
              memory: 1Gi
          volumeMounts:
            - name: ha-config
              mountPath: /config
      volumes:
        - name: ha-config
          persistentVolumeClaim:
            claimName: ha-config-pvc
---
kind: Service
apiVersion: v1
metadata:
  name: ha-web-svc
  namespace: home-assistant
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8123
      targetPort: 8123
  selector:
    app: home-assistant
  type: ClusterIP
