apps/home-assistant/networking.yaml
apiVersion: v1
kind: Service
metadata:
  name: ha-web-svc
  namespace: home-assistant
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8123
      targetPort: 8123
  selector:
    app: home-assistant
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ha-ingress
  namespace: home-assistant
spec:
  ingressClassName: traefik
  rules:
    - host: homeassistant.zieqs.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ha-web-svc
                port:
                  number: 8123
